# stalkerchan

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml.sample  docker-compose.yml  renovate.json5
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  renovate.yaml
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs  sources.rs
src/api/sources/: mod.rs
src/core/: metrics.rs  mod.rs
