[package]
name = "stalkerchan"
version = "0.0.1"
edition = "2021"
publish = false
authors = [
    "Loc Mai <locmai0201@gmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["tower-log"] }
axum-macros = "0.3.4"
config = "0.13.3"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
