[package]
name = "stalkerchan"
version = "0.0.1"
edition = "2021"
publish = false
authors = [
    "Loc Mai <locmai0201@gmail.com>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.8", features = ["tower-log"] }
axum-macros = "0.3.4"
config = "0.13.3"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
